--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+   
+    <link rel="icon" type="image/png" href="/logo4.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Realtor Hiral</title>
+    <title>Realtor Hiral - Real Estate Expert, </title>
   </head>
   <body>
     <div id="root"></div>
